# tinyraytracer-interactive

./: .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: geometry.h  light.h  material.h  sphere.h  texture.h  tinyraytracer.cpp  trace.cpp  window.h  world.h
